--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@mui/material": "^5.16.5",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-charts": "^7.11.1",
+    "bagres_frontend": "file:",
     "cookies-next": "^4.2.1",
     "html2canvas": "^1.4.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-spinners": "^0.14.1",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.9"
